--- a/WebContent/styles/styles.css
+++ b/WebContent/styles/styles.css
@@ -26,13 +26,49 @@ fieldset {
 	border: 1px solid transparent; 
 	padding: 0.3em; 
 }
+.questiontable {
+	
+}
+.formbutton {
+	padding: .5em;
+}
+.questiontable tr:nth-child(even) {
+	 background: #CCC
 
+}
+.questiontable tr:nth-child(odd) {
+	background: #FFF
+}
+.questiontable td {
+
+}
 .number_col {
+	text-align:center;
 }
 
 .question_col {
 }
-
+.answer_col {
+	text-align:center;
+}
+.question_cell {
+    float: left;
+    clear: none;
+}
+.question_cell label {
+	float: left;
+    clear: none;
+    display: block;
+    padding: 2px 1em 1px 5px;
+}
+.question_cell input[type=radio],
+input.radio {
+    float: left;
+    clear: none;
+    margin: 2px 0 0 2px;
+}
+	
+	
 .navbar {
 	display: inline-block;
 	background-color: #EAECEE;
@@ -40,6 +76,8 @@ fieldset {
     padding: 1px;
     overflow: auto;
 }
+
+
 
 .navbar button {
     padding: 3px !important;
@@ -66,4 +104,7 @@ fieldset {
 	padding:3px;
 	margin:auto; 
 	width: 50%;
+}
+.tablebullet {
+    padding-left:3em
 }
