Added more testing, added download answers feature, added re-send invitation features, added dependencies for OpenCSV
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/styles/styles.css
+++ b/WebContent/styles/styles.css
@@ -64,6 +64,9 @@ table tr:nth-child(odd) {
     float: left;
     clear: none;
 }
+.number_cell {
+    text-align:center;
+}
 .question_cell label {
 	float: left;
     clear: none;
