Add password reset function and expiration on verification emails
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/styles/styles.css
+++ b/WebContent/styles/styles.css
@@ -282,3 +282,11 @@ table tr:nth-child(odd) {
 	background: #ffffff;
 	padding: .4em;
 }
+
+.reset-password {
+	font-size: 11px;
+}
+
+#pwform {
+	width: 600px;
+}
