--- a/WebContent/styles/styles.css
+++ b/WebContent/styles/styles.css
@@ -290,3 +290,10 @@ table tr:nth-child(odd) {
 #pwform {
 	width: 600px;
 }
+
+.cert-table {
+	border: 1px solid black;
+    margin: 12px 6px 6px 6px;
+    padding: 2px 0 0 6px;
+    width: auto;
+}
