Allow users to select whether their name and email shows up on the conformance page
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/styles/styles.css
+++ b/WebContent/styles/styles.css
@@ -297,3 +297,10 @@ table tr:nth-child(odd) {
     padding: 2px 0 0 6px;
     width: auto;
 }
+
+.cert-table-cell {
+	border: 1px solid black;
+    margin: 12px 6px 6px 6px;
+    padding: 2px 2px 2px 6px;
+    width: auto;
+}
