--- a/WebContent/styles/styles.css
+++ b/WebContent/styles/styles.css
@@ -363,3 +363,21 @@ table tr:nth-child(odd) {
 #selectversion table {
 	width: 100%;
 }
+
+.file-input-button {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.file-input-button input {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  opacity: 0;
+  -ms-filter: 'alpha(opacity=0)';
+  font-size: 200px !important;
+  direction: ltr;
+  cursor: pointer;
+}
