Mostly working update directly from conformance questionnaire git repository
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/styles/styles.css
+++ b/WebContent/styles/styles.css
@@ -305,9 +305,16 @@ table tr:nth-child(odd) {
     width: 90%;
 }
 /* admin page inputs */
-.fileupload {
+label.inlineLabel {
+	display: inline;
+}
+#gitTagLabel {
 	display: inline;
 	padding: .4em;
+}
+#gitCommit {
+	display: inline;
+    padding: .4em;
 }
 .specversion {
 	display: inline;
