--- a/WebContent/styles/openchain.css
+++ b/WebContent/styles/openchain.css
@@ -35,7 +35,7 @@ img, video {
  *    user zoom.
  */
 html {
-  font-family: sans-serif;
+  font-family: sans-serif; height:100%;
   /* 1 */
   -ms-text-size-adjust: 100%;
   /* 2 */
@@ -58,9 +58,9 @@ body {
   background: #f7f7f7;
   font: 400 14px Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
   line-height: 1.4em;
-  color: #282727;
+  color: #282727;min-height:100%; padding:0; margin:0; position:relative;
 }
-
+body::after{ content:''; display:block; height:100px; }
 /* HTML5 display definitions
    ========================================================================== */
 /**
@@ -2310,7 +2310,10 @@ textarea {
   textarea {
     width: 100%;
   }
+  
+ 
 }
+
 input:focus, input.focus,
 input[type="text"]:focus,
 input[type="text"].focus,
