--- a/WebContent/styles/newstyle.css
+++ b/WebContent/styles/newstyle.css
@@ -145,7 +145,9 @@
 	padding-top: 15px;
 	}
 	
-
+#updateprofileModal{
+	z-index: 11111;
+}
 	
 /* Account menus like signin, signup, update profile and signout */
 	
