--- a/WebContent/styles/newstyle.css
+++ b/WebContent/styles/newstyle.css
@@ -84,7 +84,7 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
     z-index: 1;
-    width: 220px;
+    width: 180px;
     right:0px;
  	}
  	
@@ -153,6 +153,8 @@
 	
 #user-dropdown_menu{
 	padding-left: 10px !important;
+	margin-top: 9px !important;
+    font-size: 15px;
 	}
 /**************************** Header CSS ******************************/
 
@@ -352,6 +354,7 @@ textarea:focus ~ label, input:focus ~ label, textarea:valid ~ label{
 .mr-bt15{
 	margin-bottom:15px;
 	}
+
 /********************************* ADMIN CSS*******************************/
 
 
@@ -500,6 +503,12 @@ textarea:focus ~ label, input:focus ~ label, textarea:valid ~ label{
 .table-responsive {
     overflow: hidden !important;
 }	
+.custom-checkbox {
+    margin-bottom: 5px;
+}
+.ui-icon, .ui-widget-content .ui-icon {
+    background-image: url(../resources/jquery-ui/images/ui-icons_ffffff_256x240.png);
+}
 /*************************************** SURVEY CSS********************************************/
 
 
