Change the background color for all answers completed from green to orange
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/styles/newstyle.css
+++ b/WebContent/styles/newstyle.css
@@ -351,7 +351,7 @@ textarea:focus ~ label, input:focus ~ label, textarea:valid ~ label, .select-lab
   
   /* color of accordion header changes when all the questions are answered */
 .all-answered {
-	    background-color: #4CAF50 !important;
+	    background-color: #E25829 !important;
 	    color:white !important;
 }
 /******************************** INDEX CSS *********************************/
