Remove conforming submissions and add specification version to the table
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/styles/styles.css
+++ b/WebContent/styles/styles.css
@@ -226,7 +226,12 @@ table tr:nth-child(odd) {
 .rejected_col {
     text-align:center;
 }
+
 .completed_col {
+    text-align:center;
+}
+
+.spec_version_col {
 	text-align:center;
 }
 
